Jump to location works. There might be a bug that prevent the hidden input fields containing lat/lon to update, but that may also be my cache. It works most of the time, haven't been able to quite pin it down further.

--- a/less/style.less
+++ b/less/style.less
@@ -103,3 +103,19 @@ body {
 #map #map-canvas {
   height: 100%;
 }
+
+.ui-autocomplete {
+  background: #fff;
+  width: 180px;
+  border: 1px solid #000;
+}
+
+.ui-autocomplete li a {
+  padding: 5px;
+  cursor: pointer;
+  display: block;
+}
+
+.ui-autocomplete .ui-state-hover {
+  background: #efefef;
+}
